--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "dependencies": {
     "axios": "^0.26.0",
     "core-js": "^3.6.5",
+    "connect-history-api-fallback": "^2.0.0",
     "vue": "^2.6.11",
     "vuex": "^3.4.0"
   },
