--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "axios": "^0.26.0",
     "core-js": "^3.6.5",
     "connect-history-api-fallback": "^2.0.0",
+    "express": "^4.18.1",
     "vue": "^2.6.11",
     "vuex": "^3.4.0"
   },
